Bug 152253 - macOS Dark Mode Calc: text in Input Box unreadable (black should be white)
Summary: macOS Dark Mode Calc: text in Input Box unreadable (black should be white)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All macOS (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0
Keywords:
: 152262 152263 (view as bug list)
Depends on:
Blocks: macOS-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-11-27 19:42 UTC by steve
Modified: 2022-12-07 10:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
2022-11-27 screenshot input box wrong text color dark mode (207.95 KB, image/png)
2022-11-27 19:44 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2022-11-27 19:42:54 UTC
Description:
see screenshot, text in Input Box is unreadable in dark mode

Steps to Reproduce:
input any text into a cell and select cell
look at input box

Actual Results:
black text in input box

Expected Results:
white text in input box


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5b18eebc2c95321ce7e6edf10f4df81557382a48
CPU threads: 8; OS: Mac OS X 13.0.1; UI render: default; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 steve 2022-11-27 19:44:28 UTC
Created attachment 183834 [details]
2022-11-27 screenshot input box wrong text color dark mode
Comment 2 Sierk Bornemann 2022-11-28 07:50:11 UTC
I can confirm the issue in question.


Version: 7.5.0.0.alpha1+ (AARCH64) / LibreOffice Community
Build ID: e76b1faa3326e5cffed4472fcd410b5abf273067
CPU threads: 10; OS: Mac OS X 13.0.1; UI render: Skia/Metal; VCL: osx
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded
Comment 3 Commit Notification 2022-11-28 11:58:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/254acd7c1d8fef437985c9b428a0edddede9d5a9

Resolves: tdf#152253 Text in calc Input Box unreadable in dark mode

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2022-11-28 12:57:19 UTC
*** Bug 152262 has been marked as a duplicate of this bug. ***
Comment 5 steve 2022-11-29 14:25:32 UTC
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: fe845e40ab23a3fa9fd401498edf925b7b00776f
CPU threads: 8; OS: Mac OS X 13.0.1; UI render: default; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded

Verified, thanks for the quick fix, Caolán.
Comment 6 Caolán McNamara 2022-12-07 10:53:17 UTC
*** Bug 152263 has been marked as a duplicate of this bug. ***