Resolves: tdf#152253 Text in calc Input Box unreadable in dark mode

Change-Id: I60bfde908ac2d107d14aa7387d569d575622f962
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143376
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>